@@ -1,3 +1,6 @@
+22 November 2022: George
+	- Ignore expired error responses.
+
 11 November 2022: Wouter
 	- Fix #779: [doc] Missing documention in ub_resolve_event() for
 	  callback parameter was_ratelimited.
